# Poke

./: .env.example  .gitignore  DEPLOYMENT_STATUS.md  Procfile  README.md  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  run.py
config/: config.example.yaml  config.yaml
docker/: Dockerfile  pokealert.service
docs/: ETHICS.md  QUICKSTART.md
src/pokealert/: __init__.py  config.py  heartbeat.py  http_client.py  logging_setup.py  main.py  models.py  orchestrator.py  storage.py  web_scout.py
src/pokealert/checkers/: __init__.py  amazon.py  base.py  bestbuy.py  costco.py  gamestop.py  pokemoncenter.py  target.py  walmart.py
src/pokealert/notifiers/: __init__.py  base.py  desktop.py  discord.py  email.py  telegram.py
tests/: test_minimal.yaml
